force-app/main/default/objects/Zoho_Sales_Order__c/Zoho_Sales_Order__c.object-meta.xml
<CustomObject>
    <label>Zoho Sales Order</label>
    <nameField>
        <label>Sales Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zoho Sales Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>