force-app/main/default/objects/Zoho_Sales_Order__c/fields/Adjustment_BCY__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_BCY__c</fullName>
    <label>Adjustment (BCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>