force-app/main/default/objects/Zoho_Sales_Order__c/fields/CRM_Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>CRM_Reference_ID__c</fullName>
    <label>CRM Reference ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>