force-app/main/default/objects/Zoho_Sales_Order__c/fields/Discount_Amount_FCY__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount_FCY__c</fullName>
    <label>Discount Amount (FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>