force-app/main/default/objects/Zoho_Sales_Order__c/fields/Expected_Shipment_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Shipment_Date__c</fullName>
    <label>Expected Shipment Date</label>
    <type>Date</type>
</CustomField>