force-app/main/default/objects/Zoho_Sales_Order__c/fields/Old_Zoho_ID__c.field-meta.xml
<CustomField>
    <fullName>Old_Zoho_ID__c</fullName>
    <externalId>true</externalId>
    <label>Old Zoho ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>