force-app/main/default/objects/Zoho_Sales_Order__c/fields/Paid_Status__c.field-meta.xml
<CustomField>
    <fullName>Paid_Status__c</fullName>
    <label>Paid Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>paid</fullName>
            </value>
            <value>
                <fullName>partially_paid</fullName>
            </value>
            <value>
                <fullName>unpaid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>