force-app/main/default/objects/Zoho_Sales_Order__c/fields/Shipping_Charge_FCY__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Charge_FCY__c</fullName>
    <label>Shipping Charge (FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>