force-app/main/default/objects/Zoho_Sales_Order__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>draft</fullName>
            </value>
            <value>
                <fullName>invoiced</fullName>
            </value>
            <value>
                <fullName>open</fullName>
            </value>
            <value>
                <fullName>partially_invoiced</fullName>
            </value>
            <value>
                <fullName>void</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>