force-app/main/default/objects/Zoho_Sales_Order__c/fields/Sub_Total_BCY__c.field-meta.xml
<CustomField>
    <fullName>Sub_Total_BCY__c</fullName>
    <label>Sub Total (BCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>