force-app/main/default/objects/Zoho_Sales_Order__c/fields/Total_BCY__c.field-meta.xml
<CustomField>
    <fullName>Total_BCY__c</fullName>
    <label>Total (BCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>