force-app/main/default/objects/Zoho_Sales_Order__c/fields/Total_FCY__c.field-meta.xml
<CustomField>
    <fullName>Total_FCY__c</fullName>
    <label>Total (FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>