force-app/main/default/objects/Zoho_Sales_Order__c/fields/Zoho_Test_Data__c.field-meta.xml
<CustomField>
    <fullName>Zoho_Test_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Zoho Test Data</label>
    <type>Checkbox</type>
</CustomField>